--- a/wwwroot/dbc/info.html
+++ b/wwwroot/dbc/info.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
     <title>WoW.tools</title>
     <meta property='og:type' content='website'>
@@ -112,7 +112,6 @@
                     },
                     "pageLength": -1,
                     "autoWidth": true,
-                    "pagingType": "input",
                     "lengthMenu": [[-1], ["All"]],
                 });
             }
