--- a/wwwroot/files/keyinfo.html
+++ b/wwwroot/files/keyinfo.html
@@ -1,6 +1,6 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
     <title>WoW.tools</title>
     <meta property='og:type' content='website'>
@@ -79,11 +79,6 @@
             document.getElementById("output").innerHTML = output;
         }
     </script>
-    <footer>
-        <div class="container text-muted">
-            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
-        </div>
-    </footer>
     <link href="/css/files.css" rel="stylesheet">
 </body>
 </html>
