--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -1,47 +1,61 @@
-﻿<a class="navbar-brand" href="/">
-    <div id='logo'>
-        <div id='cog'>&nbsp;</div>
-        <div id='nocog'><img src='/img/w.svg' alt='Logo W'><img src='/img/w.svg' alt='Logo W'><span>.tools <small><i>but local</i></small></span></div>
+﻿<div class="container-fluid" style="padding: 0px">
+    <a class="navbar-brand" href="/">
+        <div id='logo'>
+            <div id='cog'>&nbsp;</div>
+            <div id='nocog'><img src='/img/w.svg' alt='Logo W'><img src='/img/w.svg' alt='Logo W'><span>.tools <small><i>but local</i></small></span></div>
+        </div>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class='fa fa-bars'></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+            <li class="nav-item">
+                <a class="nav-link" href="/files/"><i class="fa fa-files-o" aria-hidden="true"></i> Files</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-table" aria-hidden="true"></i> Tables
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navDropdown">
+                    <a class="dropdown-item" href="/dbc/">Browse</a>
+                    <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
+                    <a class="dropdown-item" href="/dbc/info.html">Info</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/mv/"><i class="fa fa-cube" aria-hidden="true"></i> Models</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/builds/"><i class="fa fa-hdd-o" aria-hidden="true"></i> Builds</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/dbc/hotfixes.html"><i class="fa fa-fire-extinguisher" aria-hidden="true"></i> Hotfixes</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-cogs" aria-hidden="true"></i> Other
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navDropdown">
+                    <a class="dropdown-item" href="/files/naming.html"><i class="fa fa-file-text" aria-hidden="true"></i> File naming</a>
+                    <a class="dropdown-item" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
+                    <a class="dropdown-item" href="/dbc/scenescript.html"><i class="fa fa-forward" aria-hidden="true"></i> Scenescripts</a>
+                    <a class="dropdown-item" href="/db/creatures.html"><i class="fa fa-users" aria-hidden="true"></i> Creatures</a>
+                    <a class="dropdown-item" href="/db/broadcasttext.html"><i class="fa fa-microphone" aria-hidden="true"></i> Voice-over lines</a>
+                </div>
+            </li>
+            
+        </ul>
     </div>
-</a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <i class='fa fa-bars'></i>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-        <li class="nav-item">
-            <a class="nav-link" href="/files/"><i class="fa fa-files-o" aria-hidden="true"></i> Files</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-table" aria-hidden="true"></i> Tables
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navDropdown">
-                <a class="dropdown-item" href="/dbc/">Browse</a>
-                <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
-                <a class="dropdown-item" href="/dbc/info.html">Info</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/mv/"><i class="fa fa-cube" aria-hidden="true"></i> Models</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/builds/"><i class="fa fa-hdd-o" aria-hidden="true"></i> Builds</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/dbc/hotfixes.html"><i class="fa fa-fire-extinguisher" aria-hidden="true"></i> Hotfixes</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-cogs" aria-hidden="true"></i> Other
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navDropdown">
-                <a class="dropdown-item" href="/files/naming.html"><i class="fa fa-file-text" aria-hidden="true"></i> File naming</a>
-                <a class="dropdown-item" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
-                <a class="dropdown-item" href="/dbc/scenescript.html"><i class="fa fa-forward" aria-hidden="true"></i> Scenescripts</a>
-                <a class="dropdown-item" href="/db/creatures.html"><i class="fa fa-users" aria-hidden="true"></i> Creatures</a>
-                <a class="dropdown-item" href="/db/broadcasttext.html"><i class="fa fa-microphone" aria-hidden="true"></i> Voice-over lines</a>
-            </div>
-        </li>
-    </ul>
+    <div>
+        <button type="button" onclick="themeClick('light')" class="btn align-items-center" data-bs-theme-value="light" aria-pressed="false">
+            Light
+        </button>
+        <button type="button" onclick="themeClick('dark')" class="btn align-items-center active" data-bs-theme-value="dark" aria-pressed="true">
+            Dark
+        </button>
+        <button type="button" onclick="themeClick('auto')" class="btn align-items-center" data-bs-theme-value="auto" aria-pressed="false">
+            Auto
+        </button>
+    </div>
 </div>
