--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -1,6 +1,6 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 <head>
     <title>WoW.tools</title>
     <meta property='og:type' content='website'>
@@ -64,56 +64,57 @@
         <i class='fa fa-reorder'></i>
     </button>
     <div id="js-sidebar" class="overlay sidebar closed container">
-        <b style='margin-left: 75px; margin-top: 0px;'>Uses modelviewer by Deamon (<i class='fa fa-link'></i> <a href='https://github.com/Deamon87/WebWowViewerCpp/tree/development' target='_BLANK'>GitHub</a>)</b><br>
-        <div class='row justify-content-md-center'>
-            <div class='col-md-11'>
-                <div class="btn-group" role="group">
-                    <button style='margin-left: 48px;' class='btn btn-mv btn-sm' data-toggle='modal' data-target='#settingsModal'><i class='fa fa-gear'></i> Settings</button>
-                    <button class='btn btn-mv btn-sm' data-toggle='modal' data-target='#helpModal'><i class='fa fa-info-circle'></i> Help/About</button>
-                    <button class='btn btn-mv btn-sm' onclick='exportScene()' id='exportButton' data-toggle="tooltip" data-placement="left" title="Exports the current model/animation to glTF"><i class='fa fa-download' disabled></i> Export glTF</button>
-                </div>
-            </div>
-        </div>
-        <div class="tab-content" id="mvTabs">
-            <div class="tab-pane fade show active" id="model" role="tabpanel" aria-labelledby="model-tab">
-                <div class='row'>
-                    <div class='col-md-2' style='padding-right: 0px'>
-                        <!--<label title='terrain files (makes search slower)' for='showADT'><input class='filterBox' type='checkbox' id='showADT'> ADT</label><br>-->
-                        <label title='larger models (buildings, cities, dungeons, raids etc)' for='showWMO'><input class='filterBox' type='checkbox' id='showWMO' CHECKED> WMO</label><br>
-                        <label title='smaller more complex models (creatures, foliage, props etc)' for='showM2'><input class='filterBox' type='checkbox' id='showM2' CHECKED> M2</label><br>
-                    </div>
-                    <div class='col-md-8'>
-                        <div id='mvfiles_filter' class='dataTables_filter'>
-                            <label>
-                                <input type="search" id="mvfiles_search" class="form-control form-control-sm" placeholder="Search" aria-controls="mvfiles">
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class='row'>
-                    <div class='col-md-12'>
-                        <table id='mvfiles' class="table table-striped table-bordered table-condensed" cellspacing="0" width="100%">
-                            <thead>
-                                <tr>
-                                    <th style='width: 50px;'>ID</th>
-                                    <th>Filename</th>
-                                </tr>
-                            </thead>
-                        </table>
+        <div class="container-fluid">
+
+            <b style='margin-left: 75px; margin-top: 0px;'>Uses modelviewer by Deamon (<i class='fa fa-link'></i> <a href='https://github.com/Deamon87/WebWowViewerCpp/tree/development' target='_BLANK'>GitHub</a>)</b><br>
+            <div class='row justify-content-md-center'>
+                <div class='col-md-11'>
+                    <div class="btn-group" role="group">
+                        <button style='margin-left: 48px;' class='btn btn-mv btn-sm' data-bs-toggle='modal' data-bs-target='#settingsModal'><i class='fa fa-gear'></i> Settings</button>
+                        <button class='btn btn-mv btn-sm' data-bs-toggle='modal' data-bs-target='#helpModal'><i class='fa fa-info-circle'></i> Help/About</button>
+                        <button class='btn btn-mv btn-sm' onclick='exportScene()' id='exportButton' data-bs-toggle="tooltip" data-bs-placement="left" title="Exports the current model/animation to glTF"><i class='fa fa-download' disabled></i> Export glTF</button>
                     </div>
                 </div>
             </div>
+
+            <div class='row'>
+                <div class='col-md-2' style='padding-right: 0px'>
+                    <!--<label title='terrain files (makes search slower)' for='showADT'><input class='filterBox' type='checkbox' id='showADT'> ADT</label><br>-->
+                    <label title='larger models (buildings, cities, dungeons, raids etc)' for='showWMO'><input class='filterBox' type='checkbox' id='showWMO' CHECKED> WMO</label><br>
+                    <label title='smaller more complex models (creatures, foliage, props etc)' for='showM2'><input class='filterBox' type='checkbox' id='showM2' CHECKED> M2</label><br>
+                </div>
+                <div class='col-md-8'>
+                    <div id='mvfiles_filter' class='dataTables_filter'>
+                        <label>
+                            <input type="search" id="mvfiles_search" class="form-control form-control-sm" placeholder="Search" aria-controls="mvfiles">
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='col-md-12'>
+                    <table id='mvfiles' class="table table-striped table-hover table-condensed" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th style='width: 50px;'>ID</th>
+                                <th>Filename</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
         </div>
+
     </div>
     <div id="js-model-control" class="overlay model-control closed">
         <div class='row justify-content-md-center'>
             <div class='col-md-11'>
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#textures" data-toggle="tab" role="tab">Textures</a>
+                        <a class="nav-link active" href="#textures" data-bs-toggle="tab" role="tab">Textures</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#geosets" data-toggle="tab" role="tab" id="mapViewerButton">Geosets</a>
+                        <a class="nav-link" href="#geosets" data-bs-toggle="tab" role="tab" id="mapViewerButton">Geosets</a>
                     </li>
                 </ul>
                 <div class="tab-content">
@@ -121,7 +122,7 @@
                     <div class="tab-pane fade show active" id="textures" role="tabpanel" aria-labelledby="textures-tab">
                         <p>Changing the skin/displayID will reset these values. Changing values in this form will let you assign FileDataIDs of your choosing to a certain texture slot.</p>
                         <form id='textureForm'></form>
-                        <button type="button" class="btn btn-primary" onclick="updateTextures();" data-dismiss="modal">Save</button>
+                        <button type="button" class="btn btn-primary" onclick="updateTextures();">Save</button>
                     </div>
                     <div class="tab-pane fade" id="geosets" role="tabpanel" aria-labelledby="geosets-tab">
 
@@ -151,7 +152,6 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="settingsModalLabel">Settings</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                     <form id='settingsForm'>
@@ -164,8 +164,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="saveSettings();" data-dismiss="modal">Save</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="saveSettings();" data-bs-dismiss="modal">Save</button>
                 </div>
             </div>
         </div>
@@ -175,7 +175,6 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="helpModalLabel">Help/About</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
                     <p>
@@ -200,7 +199,7 @@
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
